修改cmake变量，构建更通用

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ file(GLOB CPP_FILES  ${PROJECT_SOURCE_DIR}/src/*.cc  ${PROJECT_SOURCE_DIR}/src/*
 
 
 
-include_directories(c:/soft/vcpkg/installed/x86-windows/include)
+include_directories(${VCPKG_INSTALLED_DIR}/installed/x86-windows/include)
 
 # add_subdirectory(3rd)
 
